# Ares

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  cliff.toml  compose.yml  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  other.md
.github/workflows/: ci.yml  prepare-release.yml  release.yml
bench/: README.md  targets.example.json
bench/fixtures/: blog.html  github_repo.html  news_article.html  product.html  public_tender.html  recipe.html
bench/fixtures/crawl/: index.html  post-backpressure.html  post-ownership.html
crates/ares-api/: Cargo.toml  README.md
crates/ares-api/src/: dto.rs  error.rs  main.rs  openapi.rs  routes.rs  state.rs
crates/ares-api/tests/: integration.rs
crates/ares-api/tests/integration/: api_tests.rs  common.rs
crates/ares-cli/: Cargo.toml  README.md
crates/ares-cli/src/: main.rs  output.rs
crates/ares-client/: Cargo.toml  README.md
crates/ares-client/examples/: bench.rs  browser_smoke.rs
crates/ares-client/src/: anthropic.rs  browser_fetcher.rs  candle.rs  cleaner.rs  fetcher.rs  lib.rs  link_discovery.rs  llm.rs  provider.rs  robots.rs  user_agent.rs  util.rs
crates/ares-core/: Cargo.toml  README.md
crates/ares-core/src/: cache.rs  circuit_breaker.rs  crawl.rs  error.rs  groundedness.rs  job.rs  job_queue.rs  lib.rs  models.rs  proxy.rs  rand.rs  schema.rs  scrape.rs  stealth.rs  testutil.rs  throttle.rs  traits.rs  util.rs  worker.rs
crates/ares-db/: Cargo.toml  README.md
crates/ares-db/migrations/: 003_crawl_support.sql  004_extraction_metadata.sql
crates/ares-db/src/: config.rs  database.rs  job_repository.rs  lib.rs  repository.rs
crates/ares-db/tests/: integration.rs
crates/ares-db/tests/integration/: common.rs  extraction_tests.rs  job_queue_tests.rs
crates/ares-server/: Cargo.toml
crates/ares-server/src/: auth.rs  dto.rs  error.rs  lib.rs  main.rs  openapi.rs  routes.rs  state.rs
crates/ares-server/tests/integration/: api_tests.rs  common.rs
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  local-inference.md
migrations/: 001_init.sql  002_scrape_jobs.sql
schemas/: README.md  blog.json  registry.json
schemas/blog/: 1.0.0.json  1.1.0.json
schemas/dataset/: 1.0.0.json
schemas/event/: 1.0.0.json
schemas/github_repo/: 1.0.0.json
schemas/job_board/: 1.0.0.json
schemas/job_listing/: 1.0.0.json
schemas/news_article/: 1.0.0.json
schemas/product/: 1.0.0.json
schemas/public_tenders/: 1.0.0.json
schemas/recipe/: 1.0.0.json
schemas/tender_list/: 1.0.0.json
