[workspace]
resolver = "2"
members = [
    "crates/ares-core",
    "crates/ares-client",
    "crates/ares-db",
    "crates/ares-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP
reqwest = { version = "0.13.2", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Env
dotenvy = "0.15"

# HTML to Markdown
htmd = "0.5.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "json"] }

# Internal crates
ares-core = { path = "crates/ares-core" }
ares-client = { path = "crates/ares-client" }
ares-db = { path = "crates/ares-db" }

[profile.release]
lto = true
strip = true
