[workspace]
resolver = "2"
members = [
    "crates/ares-core",
    "crates/ares-client",
    "crates/ares-db",
    "crates/ares-cli",
    "crates/ares-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1.21", features = ["v4", "serde"] }

# HTTP
reqwest = { version = "0.13.2", features = ["json"] }

# HTTP Server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# CLI
clap = { version = "4.5.60", features = ["derive", "env"] }

# Env
dotenvy = "0.15"

# HTML to Markdown
htmd = "0.5.0"

# Headless browser
chromiumoxide = { version = "0.8", features = ["tokio-runtime"], default-features = false }
futures = "0.3.32"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "json"] }

# Internal crates
ares-core = { path = "crates/ares-core" }
ares-client = { path = "crates/ares-client" }
ares-db = { path = "crates/ares-db" }

[profile.release]
lto = true
strip = true
