[package]
name = "ares-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI entry point for Ares AI scraper"

[features]
browser = ["ares-client/browser"]

[[bin]]
name = "ares"
path = "src/main.rs"

[dependencies]
ares-core.workspace = true
ares-client.workspace = true
ares-db.workspace = true
clap.workspace = true
tokio.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
anyhow.workspace = true
sqlx.workspace = true
tokio-util.workspace = true
uuid.workspace = true
