[package]
name = "ares-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP fetcher, HTML cleaner, and LLM extraction client for Ares"

[dependencies]
ares-core.workspace = true
reqwest.workspace = true
htmd.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
