[package]
name = "ares-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP fetcher, HTML cleaner, and LLM extraction client for Ares"

[features]
browser = ["dep:chromiumoxide", "dep:futures"]

[dependencies]
ares-core.workspace = true
reqwest.workspace = true
url.workspace = true
htmd.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chromiumoxide = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["full"] }
