[package]
name = "ares-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, traits, and error handling for Ares AI scraper"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
