[package]
name = "ares-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PostgreSQL repository layer for Ares AI scraper"

[dependencies]
ares-core.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
