[package]
name = "ares-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP server for Ares AI scraper"

[dependencies]
# HTTP Server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Internal crates
ares-core.workspace = true
ares-db.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# IDs & Time
uuid.workspace = true
chrono.workspace = true

# Env
dotenvy.workspace = true
