[package]
name = "ares-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP server for Ares AI scraper"

[dependencies]
# HTTP Server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# OpenAPI
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

# Internal crates
ares-core.workspace = true
ares-client.workspace = true
ares-db.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# IDs & Time
uuid.workspace = true
chrono.workspace = true

# Security
subtle.workspace = true

# Env
dotenvy.workspace = true

# Rate limiting
tower_governor.workspace = true

[dev-dependencies]
testcontainers.workspace = true
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
axum = { workspace = true, features = ["macros"] }
http-body-util.workspace = true
sqlx.workspace = true
